Changed to autoconf for creating makefile(s) and re-added libs

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,18 @@
 build/
 ext/
+aclocal.m4
+autom4te.cache
+autoscan.log
+compile
+configure
+depcomp
+install-sh
+missing
+src/Makefile.in
+.deps
+config.log
+config.status
+Makefile
+*.o
+Makefile.in
+.dirstamp
